演示后提交，使用sqlsession批量提交

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,12 +1,13 @@
 # Global logging configuration
 #在开发环境下日志级别要设置成DEBUG,生产环境设置成error或info
-log4j.rootLogger=DEBUG, stdout
+
+log4j.rootLogger=DEBUG, fileout
 # Console output...
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
-log4j.logger.java.sql.ResultSet=INFO
-log4j.logger.org.apache=INFO
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
+#配置日志信息输出目的地Appender
+log4j.appender.fileout=org.apache.log4j.RollingFileAppender
+log4j.appender.fileout.File=${webApp.root}/logs/log.log
+log4j.appender.fileout.MaxFileSize=5MB
+log4j.appender.fileout.Append=true
+#配置日志信息的格式(布局)
+log4j.appender.fileout.layout=org.apache.log4j.TTCCLayout
+
