--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?characterEncoding=utf-8
-jdbc.username=root
+jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.senderName=root
 jdbc.password=root
