--- a/src/main/resources/im.properties
+++ b/src/main/resources/im.properties
@@ -5,3 +5,4 @@ clientSecret=12DDE3C5E07B491B8FD25FE38D38ECEB
 baseUrl=https://im.yyuap.com/sysadmin/rest/
 ybzUrl=http://10.10.3.107:9991/approve/callback/session
 tenant_id=eb8fyyd2
+descUrl=http://172.20.4.183:1228/servlet/djdesServlet
