--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,16 @@
       <artifactId>zkclient</artifactId>
       <version>0.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.0.2.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.1.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>message</finalName>
