设置log4j输出utf-8格式,增加打印日志

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,14 @@
 # Global logging configuration
-#在开发环境下日志级别要设置成DEBUG,生产环境设置成error或info
+#锟节匡拷锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷志锟斤拷锟斤拷要锟斤拷锟矫筹拷DEBUG,锟斤拷锟斤拷锟斤拷锟斤拷锟斤拷锟矫筹拷error锟斤拷info
 
 log4j.rootLogger=DEBUG, fileout
 # Console output...
-#配置日志信息输出目的地Appender
+#锟斤拷锟斤拷锟斤拷志锟斤拷息锟斤拷锟侥匡拷牡锟紸ppender
 log4j.appender.fileout=org.apache.log4j.RollingFileAppender
 log4j.appender.fileout.File=${webApp.root}/logs/log.log
 log4j.appender.fileout.MaxFileSize=5MB
 log4j.appender.fileout.Append=true
-#配置日志信息的格式(布局)
+log4j.appender.fileout.Encoding=UTF-8
+#锟斤拷锟斤拷锟斤拷志锟斤拷息锟侥革拷式(锟斤拷锟斤拷)
 log4j.appender.fileout.layout=org.apache.log4j.TTCCLayout
 
